--- a/resources/homework.html
+++ b/resources/homework.html
@@ -5,19 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./static/style.css" rel="stylesheet">
-    <title>U of T Bootcamp</title>
+    <title>Homework</title>
 </head>
 <body>
-    <header>
-        <h1>U of T Study Cheatsheet</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="solutions.html">Solutions</a>
-            <a href="homework.html">Homework Examples</a>
+    <header class="header">
+        <h1 class="title">U of T Study Cheatsheet</h1>
+        <nav class="navbar">
+            <a class="no-deco navbar--item" href="index.html">Home</a>
+            <a class="no-deco navbar--item" href="solutions.html">Solutions</a>
+            <a class="no-deco navbar--item" href="homework.html">Homework Examples</a>
         </nav>
     </header>
     <main>
-        
+        <section class="card">
+            <ul class="card--list">
+                <li class="card--list-item">
+                    Nothing here yet!
+                </li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
